Dodani dijagrami razreda

--- a/dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -15,10 +15,11 @@
 			0.1 & Napisani obrasci uporabe & Bortas & 02.11.2020.		\\[3pt] \hline 
 			0.2	& Napisan Opis projektnog zadatka & Horvat & 03.11.2020.	\\[3pt] \hline 
 			0.5 & Dodani Use Case dijagrami i sekvencijski dijagrami & Bortas & 04.11.2020. \\[3pt] \hline
+			0.7 & Dodan opis baze, tablica i ER dijagram & Horvat & 11.11.2020. \\[3pt]\hline
+			0.8 & Dodani dijagrami razreda & Bortas & 12.11.2020.
 			
 			
 			
 		\end{longtabu}
 	
 	
-		\textit{Moraju postojati glavne revizije dokumenata 1.0 i 2.0 na kraju prvog i drugog ciklusa. Između tih revizija mogu postojati manje revizije već prema tome kako se dokument bude nadopunjavao. Očekuje se da nakon svake značajnije promjene (dodatka, izmjene, uklanjanja dijelova teksta i popratnih grafičkih sadržaja) dokumenta se to zabilježi kao revizija. Npr., revizije unutar prvog ciklusa će imati oznake 0.1, 0.2, …, 0.9, 0.10, 0.11.. sve do konačne revizije prvog ciklusa 1.0. U drugom ciklusu se nastavlja s revizijama 1.1, 1.2, itd.}
