--- a/dokumentacija/Dodatak.tex
+++ b/dokumentacija/Dodatak.tex
@@ -1,36 +1,91 @@
 \chapter*{Dodatak: Prikaz aktivnosti grupe}
-		\addcontentsline{toc}{chapter}{Dodatak: Prikaz aktivnosti grupe}
 		
 		\section*{Dnevnik sastajanja}
-		
-		\textbf{\textit{Kontinuirano osvježavanje}}\\
-		
-		 \textit{U ovom dijelu potrebno je redovito osvježavati dnevnik sastajanja prema predlošku.}
 		
 		\begin{packed_enum}
 			\item  sastanak
 			
 			\item[] \begin{packed_item}
-				\item Datum: u ovom formatu: \today
-				\item Prisustvovali: I.Prezime, I.Prezime
+				\item Datum: 7. listopada 2020.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
 				\item Teme sastanka:
 				\begin{packed_item}
-					\item  opis prve teme
-					\item  opis druge teme
+					\item  Upoznavanje članova tima
+					\item  Dogovor o tehnologijama. Dogovoreno: Postgres - Spring - React
+					\item Dogovor o prijedlogu drugog projektnog zadatka
 				\end{packed_item}
 			\end{packed_item}
 			
 			\item  sastanak
 			\item[] \begin{packed_item}
-				\item Datum: u ovom formatu: \today
-				\item Prisustvovali: I.Prezime, I.Prezime
+				\item Datum: 15. listopada 2020.
+				\item Prisustvovali:  Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
 				\item Teme sastanka:
 				\begin{packed_item}
-					\item  opis prve teme
-					\item  opis druge teme
+					\item  Razgovor o funkcionalnim zahtjevima sustava i arhitekturi
+					
 				\end{packed_item}
 			\end{packed_item}
+			\item  sastanak
 			
+			\item[] \begin{packed_item}
+				\item Datum: 19. listopada 2020.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Definiranje organizacije baze podataka
+					\item Dogovor o raspodjeli poslova
+				\end{packed_item}
+			\end{packed_item}
+		
+			
+				\item  sastanak
+				
+				\item[] \begin{packed_item}
+					\item Datum: 22. listopada 2020.
+					\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Ivana Cepetić, Luka Martić
+					\item Teme sastanka:
+					\begin{packed_item}
+						\item Razgovor o optimalnoj organizaciji baze podataka
+					\end{packed_item}
+				\end{packed_item}
+				\item  sastanak
+			
+			\item[] \begin{packed_item}
+				\item Datum: 29. listopada 2020.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Podjela uloga za kreiranje baze, izradu kontrolera, servisa i repozitorija, dokumentacije i logina i registgracije
+				\end{packed_item}
+			\end{packed_item}
+		\item[] \begin{packed_item}
+			\item Datum: 4. studenoga 2020.
+			\item Prisustvovali:  Dora Horvat, Dora Bortas, Ivana Cepetić, Luka Martić
+			\item Teme sastanka:
+			\begin{packed_item}
+				\item Razgovor o trenutnom napretku dokumentacije
+				
+			\end{packed_item}
+		\end{packed_item}
+		\item[] \begin{packed_item}
+			\item Datum: 6. studenoga 2020.
+			\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas
+			\item Teme sastanka:
+			\begin{packed_item}
+				\item Diskusija o trenutnom napretku projekta
+				\item Podjela poslova koji se moraju obaviti do prve predaje projekta
+			\end{packed_item}
+		\end{packed_item}
+			
+			\item[] \begin{packed_item}
+				\item Datum: 12. studenoga 2020.
+				\item Prisustvovali: Mateja Iveta, Dora Horvat, Vedran Hernaus, Lea Brzica, Matija Holik, Denis Đurašinović , Dora Bortas, Ivana Cepetić, Luka Martić, Hrvoje Šimić
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item Pregled generičkih funkcionalnosti aplikacije prije prve predaje
+				\end{packed_item}
+			\end{packed_item}
 			%
 			
 		\end{packed_enum}
